crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__set_model__tests__set_model_only_affects_user_messages.snap
---
source: crates/forge_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)_user_only
before:
  messages:
    - text:
        role: System
        content: System message
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message
        tool_calls: ~
        model: ~
after:
  messages:
    - text:
        role: System
        content: System message
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message
        tool_calls: ~
        model: gpt-4
